[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-dav-client"
version = "0.1.0a1"
description = "A minimal, robust command-line client for interacting with a WebDAV server over plain HTTP with no authentication."
readme = "README.md"
requires-python = ">=2"
license = "MIT"
authors = [
  { name="Jifeng Wu", email="jifengwu2k@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "cowlist",
    "fspathverbs",
    "requests",
    "typing; python_version < '3.5'"
]

[project.urls]
"Homepage" = "https://github.com/jifengwu2k/simple-dav-client"
"Bug Tracker" = "https://github.com/jifengwu2k/simple-dav-client/issues"